# sdl_playground

./: CMakeLists.txt  build-debug.sh  build-release.sh  build-script.sh
src/: main.cpp
